# CodeAce

./: .gitignore  README.md  REDME.md  code_ace_agent.py  core_agent.py  main.py  mapping_agent.py  pyproject.toml  requirements.txt  setup.cfg  structure.txt  test.py
examples/: basic_usage.py
managers/: file_manage.py  file_manager.py  llm_manager.py  prompt_manager.py  token_manager.py
managers/CodeAce/app_data/: code_mapping.json  summary_doc.md
src/codeace/: __init__.py
src/codeace.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/codeace/agents/: core_agent.py  mapping_agent.py
src/codeace/managers/: file_manager.py  llm_manager.py  prompt_manager.py  token_manager.py
streamlit_gui/: streamlit_gui.py
utils/: utils.py
