[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codeace"
version = "0.1.0"
description = "A tool for code analysis and documentation using LLMs"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "langchain_core",
    "langchain",
    "pydantic",
    "openai",
    "python_dotenv",
    "langchain_anthropic",
    "langchain_google_genai",
    "langchain_ollama",
    "tiktoken"
] 